fixed z-index on search box after fixing back button

--- a/public/css/headerStyle.css
+++ b/public/css/headerStyle.css
@@ -17,7 +17,7 @@ body {
   position: fixed;
   justify-content: space-between;
   width: 100vw;
-  z-index: 2;
+  z-index: 999;
   gap: 24px;
   background-color: #0d6efd;
   height: 64px;
